Update Projects GitHub repo link buttons color to address contrast issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 :root {
   --primary-color: #ff5733;
+  --primary-color-dark: #c42a0e;
   --secondary-color: #efefef;
   --background-color: #1c1c1c;
   --navbar-bg-color: #333333;
   --link-color: #ffa500;
   --button-bg-color: #28a745;
   --button-hover-color: #23933b;
-  --button-active-color: #19692c;
   --card-bg-color: #f3f0e6;
   --text-color: #1c1c1c;
 }
@@ -147,8 +147,7 @@ hr {
   font-size: 14px;
   font-weight: 600;
   color: #ffffff;
-  background-color: var(--button-bg-color);
-  border: none;
+  background-color: var(--primary-color-dark);
   border-radius: 6px;
   text-decoration: none;
   transition: background-color 0.3s ease;
@@ -156,10 +155,6 @@ hr {
 
 .github-button:hover {
   background-color: var(--button-hover-color);
-}
-
-.github-button:active {
-  background-color: var(--button-active-color);
 }
 
 /* Previous Work */
@@ -189,7 +184,6 @@ hr {
 .grid-item ul {
   padding-left: 20px;
 }
-
 
 .resume-form {
   color: var(--secondary-color);
